<resources>
    <string name="app_name">EDUPATH application</string>
    <string name="master_more_stress_less">Master more, Stress less</string>
    <string name="log_in_with_google">Log in with google</string>
    <string name="log_in_with_facebook">Log in with facebook</string>
    <string name="remember_me">Remember me</string>
    <string name="password">password</string>
    <string name="user_name">User name</string>
    <string name="log_in">Log In</string>
    <string name="forget_password">Forget password</string>
    <string name="welcome">Welcome!</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="start_learning">Start Learning!</string>
    <string name="join_study_groups_solve_doubts_and_track_your_progress">Join study groups, solve doubts, and track your progress!</string>
    <string name="collaborate_amp_compete"><![CDATA[Collaborate & Compete]]></string>
    <string name="introduction_to_python">Introduction to python</string>
    <string name="overview">Overview</string>
    <string name="lectures">Lectures</string>
    <string name="reviews">Reviews</string>
    <string name="_4_5">4.5</string>
    <string name="_5k_learners">5K learners</string>
    <string name="beginner_level">Beginner level</string>
    <string name="completion_certificate">Completion certificate</string>
    <string name="_28_hours">28 Hours</string>
    <string name="go_back">Go back</string>
    <string name="go_to_forum">Go to forum</string>
    <string name="lecture_1">Lecture 1</string>
    <string name="introduction_to_pyhton">Introduction to python</string>
    <string name="lecture_2">Lecture 2</string>
    <string name="object_oriented_programming">Object oriented programming</string>
    <string name="lecture_3">Lecture 3</string>
    <string name="design_patterns">Design patterns</string>
    <string name="lecture_4">Lecture 4</string>
    <string name="collections_and_generics">Collections and Generics</string>
    <string name="lecture_5">Lecture 5</string>
    <string name="amal_silva">Amal Silva</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="add_a_review">Add a review</string>
    <string name="question">Question</string>
    <string name="answers">Answers</string>
    <string name="navigate_to_answers">navigate to answers</string>
    <string name="submit_question">Submit Question</string>
    <string name="enjoying_learning">Enjoying Learning ?</string>
    <string name="_4th_answer">4th answer</string>
    <string name="_3rd_answer">3rd answer</string>
    <string name="_2nd_answer">2nd answer</string>
    <string name="_1st_answer">1st answer</string>
    <string name="sample_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="img">img</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_utlabore_et_dolore_magna_aliqua">Lorem ipsum dolor sit amet,consectetur adipiscing elit. Sed do eiusmod tempor incididunt utlabore et dolore magna aliqua.</string>
    <string name="_2_hours_left">2 hours left</string>
    <string name="re_enter_password">Re enter Password</string>
</resources>